# darts-clone

./: Applications.md  BSD  COPYING  ChangeLog.md  ClassInterface.md  Evaluation.md  Introduction.md  Makefile  Makefile.am  Makefile.in  Makefile.vc  ProjectHome.md  README  configure  configure.ac  darts-clone-test.cpp  darts-clone-time.cpp  darts-clone.cpp  darts-clone.h
0.32e1/: BSD  INSTALL  README  darts-clone.h
0.32e2/: mkdarts-clone.cpp
0.32e2/tests/: CorrectIndexFile
0.32e3/: darts-clone-time.cpp
0.32e5/: darts-clone.h
0.32e5/tests/: test-darts-clone.sh
branches/0.32a/: mkdarts-clone.cpp
branches/0.32b/: Makefile.vc  README  darts-clone.h
branches/0.32c/tests/: CorrectIndexFile
branches/0.32d/: Makefile  Makefile.vc  darts-clone-test.cpp
branches/0.32d/tests/: CorrectHugeIndexFile  CorrectResultFile
branches/0.32e/0.32e1/: darts-clone.cpp
branches/0.32e/0.32e4/: darts-clone-time.cpp  darts-clone.h
branches/0.32e/0.32e5/: BSD
branches/0.32f/darts-clone-0.32f-beta1/: Makefile  darts-clone.cpp
branches/0.32f/darts-clone-0.32f-beta2/: Makefile  darts-clone-test.cpp  darts-clone.h
branches/0.32f/darts-clone-0.32f-rc1/: darts-clone.cpp  mkdarts-clone.cpp
darts-clone-0.32f/: configure.ac
darts-clone-0.32f-beta1/: darts-clone-test.cpp  darts-clone-time.cpp  darts-clone.h  mkdarts-clone.cpp
darts-clone-0.32f-beta2/: darts-clone-time.cpp
darts-clone-0.32f-beta3/: darts-clone.cpp  darts-clone.h  mkdarts-clone.cpp
darts-clone-0.32f-beta3/tests/: CorrectIndexFile
darts-clone-0.32f-rc1/: Makefile.vc  darts-clone-time.cpp  darts-clone.h
darts-clone-0.32f/src/: Makefile.am  Makefile.in
darts-clone-0.32f/test/: Makefile.am  darts-clone-test.cpp  test-bin.sh
darts-clone-0.32g-beta/test/: test-tool.sh
darts-clone-0.32g-beta/tool/: Makefile.am  darts.cc  lexicon.h  mersenne-twister.h
darts-clone-0.32g-beta2/: configure.ac
darts-clone-0.32g-beta3/test/: test-darts.cc
darts-clone-0.32g-beta4/include/: darts.h
darts-clone-0.32g-beta5/: Makefile.in
darts-clone-0.32g-beta5/tool/: darts-benchmark.cc  timer.h
include/: darts.h
src/: Makefile.in
test/: Makefile.am  Makefile.in  test-lib.sh
tests/: CorrectHugeIndexFile  CorrectIndexFile  CorrectResultFile  KeyFile  Makefile.in  TextFile  test-darts-clone.sh  test-tools.sh
tool/: Makefile.in  lexicon.h  mkdarts.cc
trunk/: Makefile  Makefile.in  Makefile.vc  README  configure  configure.ac  darts-clone-test.cpp  darts-clone-time.cpp  darts-clone.h  mkdarts-clone.cpp
trunk/include/: darts.h
trunk/src/: Makefile.am  darts-clone.h  mkdarts-clone.cpp
trunk/test/: Makefile.am  Makefile.in  darts-clone-test.cpp
trunk/tests/: CorrectHugeIndexFile  CorrectIndexFile  CorrectResultFile  KeyFile  Makefile.am
trunk/tool/: darts-benchmark.cc
trunk/tools/: darts-benchmark.cc
wiki/: Applications.wiki  ChangeLog.wiki  ClassInterface.wiki  DartsClone.wiki  DictionarySizeComparison.wiki  Evaluation.wiki  Introduction.wiki  ProcessingTime.wiki
(+29 files in other folders)
