#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([darts-clone], [0.32g], [syata@acm.org])
AC_CONFIG_SRCDIR([include/darts.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL

AC_LANG([C++])

# Checks for libraries.

# Checks for C++ header files.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([strtol])

AC_CONFIG_FILES([Makefile tools/Makefile tests/Makefile])
AC_OUTPUT
