AM_CXXFLAGS = -Wall -Weffc++

bin_PROGRAMS = mkdarts-clone darts-clone darts-clone-benchmark

mkdarts_clone_SOURCES = mkdarts-clone.cc
darts_clone_SOURCES = darts-clone.cc
darts_clone_benchmark_SOURCES = darts-clone-benchmark.cc

include_HEADERS = darts-clone.h

EXTRA_HEADERS = timer.h

EXTRA_DIST = ${EXTRA_HEADERS}
